# tinkerlang

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
lld-sys/: Cargo.toml  build.rs  gen-bindings.sh  headers.h
lld-sys/src/: bindings.rs  lib.rs
scripts/: .gitignore  build-release.sh  llvm0-fetch.sh  llvm1-compile-llvm-static.sh  llvm2-compile-lld-static.sh  llvm3-compile-llvm-shared.sh  mode-debug.sh  mode-release.sh  setup-deps.sh  setup-llvm.sh  shave-llvm.sh
src/: lowerer.rs  main.rs
src/ir/: emit.rs  js_boundary.rs  mod.rs  primer.js
