[package]
name = "tinkerlang"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
quick-js = "0.4.1"
inkwell = { path = "./scripts/inkwell", features = ["llvm11-0"] }
lld-sys = { path = "lld-sys" }
clap = "2.33.3"
structopt = "0.3.21"
tree-sitter = "0.19.3"
libloading = "0.7.0"
dirs = "3.0.1"
